[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/panel/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="center_container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" parent="center_container" instance=ExtResource( 1 )]
margin_left = 560.0
margin_top = 240.0
margin_right = 1360.0
margin_bottom = 840.0
rect_min_size = Vector2( 800, 600 )

[node name="margin_container2" type="MarginContainer" parent="center_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="title" type="Label" parent="center_container/panel/margin_container2/vbox_container"]
margin_top = 96.0
margin_right = 760.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "INFO HARVEST"
align = 1
valign = 1

[node name="buttons_container" type="VBoxContainer" parent="center_container/panel/margin_container2/vbox_container"]
margin_top = 270.0
margin_right = 760.0
margin_bottom = 531.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="play_button" parent="center_container/panel/margin_container2/vbox_container/buttons_container" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 760.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "NEW GAME"

[node name="how_to_play_button" parent="center_container/panel/margin_container2/vbox_container/buttons_container" instance=ExtResource( 3 )]
margin_top = 70.0
margin_right = 760.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "How to play"

[node name="credits_menu_button" parent="center_container/panel/margin_container2/vbox_container/buttons_container" instance=ExtResource( 3 )]
margin_top = 140.0
margin_right = 760.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CREDITS"

[node name="exit_button" parent="center_container/panel/margin_container2/vbox_container/buttons_container" instance=ExtResource( 3 )]
margin_top = 210.0
margin_right = 760.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EXIT"

[node name="version" type="Label" parent="center_container/panel/margin_container2/vbox_container"]
margin_top = 541.0
margin_right = 760.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 2 )
text = "v0.1"
align = 1
valign = 1

[connection signal="pressed" from="center_container/panel/margin_container2/vbox_container/buttons_container/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container2/vbox_container/buttons_container/how_to_play_button" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container2/vbox_container/buttons_container/credits_menu_button" to="." method="_on_credits_menu_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container2/vbox_container/buttons_container/exit_button" to="." method="_on_exit_button_pressed"]
